openstack: set specific network name in e2e tests

--- a/test/e2e/provisioning/testdata/machine-openstack-upgrade.yml
+++ b/test/e2e/provisioning/testdata/machine-openstack-upgrade.yml
@@ -22,6 +22,7 @@ spec:
       floatingIpPool: ""
       domainName: "<< DOMAIN_NAME >>"
       region: "<< REGION >>"
+      network: "<< NETWORK_NAME >>"
     operatingSystem: "<< OS_NAME >>"
     operatingSystemSpec:
       distUpgradeOnBoot: true
