--- a/test/e2e/provisioning/testdata/machine-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machine-openstack.yaml
@@ -20,6 +20,7 @@ spec:
       floatingIpPool: ""
       domainName: "<< DOMAIN_NAME >>"
       region: "<< REGION >>"
+      network: "<< NETWORK_NAME >>"
     operatingSystem: "<< OS_NAME >>"
   roles:
   - "Node"
