--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -1,3 +1,15 @@
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: machines.cluster.k8s.io
+spec:
+  group: cluster.k8s.io
+  version: v1alpha1
+  scope: Namespaced
+  names:
+    kind: Machine
+    plural: machines
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -252,8 +264,17 @@ rules:
   - "apiextensions.k8s.io"
   resources:
   - "customresourcedefinitions"
+  resourceNames:
+  - "machines.machine.k8s.io"
+  verbs:
+  - "delete"
+- apiGroups:
+  - "apiextensions.k8s.io"
+  resources:
+  - "customresourcedefinitions"
   verbs:
   - "create"
+  - "get"
 - apiGroups:
   - "apiextensions.k8s.io"
   resources:
