--- a/test/e2e/provisioning/testdata/machine-azure.yaml
+++ b/test/e2e/provisioning/testdata/machine-azure.yaml
@@ -2,29 +2,29 @@ apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
   name: << MACHINE_NAME >>
+  namespace: kube-system
 spec:
   providerConfig:
-    sshPublicKeys:
-      - "<< YOUR_PUBLIC_KEY >>"
-    cloudProvider: "azure"
-    cloudProviderSpec:
-      tenantID: "<< AZURE_TENANT_ID >>"
-      clientID: "<< AZURE_CLIENT_ID >>"
-      clientSecret: "<< AZURE_CLIENT_SECRET >>"
-      subscriptionID: "<< AZURE_SUBSCRIPTION_ID >>"
-      location: "westeurope"
-      resourceGroup: "machine-controller-e2e"
-      vmSize: "Standard_F1"
-      vnetName: "machine-controller-e2e"
-      subnetName: "machine-controller-e2e"
-      routeTableName: "machine-controller-e2e"
-      assignPublicIP: false
-    operatingSystem: "<< OS_NAME >>"
-    operatingSystemSpec:
-      distUpgradeOnBoot: false
-  roles:
-  - "Node"
+    value:
+      sshPublicKeys:
+        - "<< YOUR_PUBLIC_KEY >>"
+      cloudProvider: "azure"
+      cloudProviderSpec:
+        tenantID: "<< AZURE_TENANT_ID >>"
+        clientID: "<< AZURE_CLIENT_ID >>"
+        clientSecret: "<< AZURE_CLIENT_SECRET >>"
+        subscriptionID: "<< AZURE_SUBSCRIPTION_ID >>"
+        location: "westeurope"
+        resourceGroup: "machine-controller-e2e"
+        vmSize: "Standard_F1"
+        vnetName: "machine-controller-e2e"
+        subnetName: "machine-controller-e2e"
+        routeTableName: "machine-controller-e2e"
+        assignPublicIP: false
+      operatingSystem: "<< OS_NAME >>"
+      operatingSystemSpec:
+        distUpgradeOnBoot: false
+      containerRuntimeInfo:
+        name: "<< CONTAINER_RUNTIME >>"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
-    containerRuntime:
-      name: "<< CONTAINER_RUNTIME >>"
