--- a/test/e2e/provisioning/testdata/machine-digitalocean.yaml
+++ b/test/e2e/provisioning/testdata/machine-digitalocean.yaml
@@ -2,28 +2,28 @@ apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
   name: << MACHINE_NAME >>
+  namespace: kube-system
 spec:
   providerConfig:
-    sshPublicKeys:
-      - "<< YOUR_PUBLIC_KEY >>"
-    cloudProvider: "digitalocean"
-    cloudProviderSpec:
-      token: << DIGITALOCEAN_TOKEN >>
-      region: nyc3
-      size: c-2
-      backups: false
-      ipv6: false
-      private_networking: true
-      monitoring: false
-      tags:
-        - "machine-controller"
-    # Can be 'ubuntu', 'coreos' or 'centos'
-    operatingSystem: "<< OS_NAME >>"
-    operatingSystemSpec:
-      disableAutoUpdate: true
-  roles:
-  - "Node"
+    value:
+      sshPublicKeys:
+        - "<< YOUR_PUBLIC_KEY >>"
+      cloudProvider: "digitalocean"
+      cloudProviderSpec:
+        token: << DIGITALOCEAN_TOKEN >>
+        region: nyc3
+        size: c-2
+        backups: false
+        ipv6: false
+        private_networking: true
+        monitoring: false
+        tags:
+          - "machine-controller"
+      # Can be 'ubuntu', 'coreos' or 'centos'
+      operatingSystem: "<< OS_NAME >>"
+      operatingSystemSpec:
+        disableAutoUpdate: true
+      containerRuntimeInfo:
+        name: "<< CONTAINER_RUNTIME >>"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
-    containerRuntime:
-      name: "<< CONTAINER_RUNTIME >>"
