--- a/test/e2e/provisioning/testdata/machine-hetzner.yaml
+++ b/test/e2e/provisioning/testdata/machine-hetzner.yaml
@@ -2,24 +2,22 @@ apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
   name: << MACHINE_NAME >>
+  namespace: kube-system
 spec:
   providerConfig:
-    sshPublicKeys:
-      - "<< YOUR_PUBLIC_KEY >>"
-    cloudProvider: "hetzner"
-    cloudProviderSpec:
-      token: << HETZNER_TOKEN >>
-      serverType: "cx11"
-      datacenter: ""
-      location: "fsn1"
-    # Can be 'ubuntu', or 'centos'
-    operatingSystem: "<< OS_NAME >>"
-    operatingSystemSpec:
-      distUpgradeOnBoot: false
-  roles:
-  - "Node"
+    value:
+      sshPublicKeys:
+        - "<< YOUR_PUBLIC_KEY >>"
+      cloudProvider: "hetzner"
+      cloudProviderSpec:
+        token: << HETZNER_TOKEN >>
+        serverType: "cx11"
+        datacenter: ""
+        location: "fsn1"
+      operatingSystem: "<< OS_NAME >>"
+      operatingSystemSpec:
+        distUpgradeOnBoot: false
+      containerRuntimeInfo:
+        name: "<< CONTAINER_RUNTIME >>"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
-    # Must be 'docker' if you don't use Ubuntu
-    containerRuntime:
-      name: "<< CONTAINER_RUNTIME >>"
