--- a/test/e2e/provisioning/testdata/machine-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machine-openstack.yaml
@@ -2,29 +2,26 @@ apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
   name: << MACHINE_NAME >>
+  namespace: kube-system
 spec:
-  metadata:
-    labels:
-      foo: "bar"
   providerConfig:
-    sshPublicKeys:
-      - "<< YOUR_PUBLIC_KEY >>"
-    cloudProvider: "openstack"
-    cloudProviderSpec:
-      identityEndpoint: "<< IDENTITY_ENDPOINT >>"
-      username: "<< USERNAME >>"
-      password: "<< PASSWORD >>"
-      tenantName: "<< TENANT_NAME >>"
-      image: "<< OS_NAME >>"
-      flavor: "m1.small"
-      floatingIpPool: ""
-      domainName: "<< DOMAIN_NAME >>"
-      region: "<< REGION >>"
-      network: "<< NETWORK_NAME >>"
-    operatingSystem: "<< OS_NAME >>"
-  roles:
-  - "Node"
+    value:
+      sshPublicKeys:
+        - "<< YOUR_PUBLIC_KEY >>"
+      cloudProvider: "openstack"
+      cloudProviderSpec:
+        identityEndpoint: "<< IDENTITY_ENDPOINT >>"
+        username: "<< USERNAME >>"
+        password: "<< PASSWORD >>"
+        tenantName: "<< TENANT_NAME >>"
+        image: "<< OS_NAME >>"
+        flavor: "m1.small"
+        floatingIpPool: ""
+        domainName: "<< DOMAIN_NAME >>"
+        region: "<< REGION >>"
+        network: "<< NETWORK_NAME >>"
+      operatingSystem: "<< OS_NAME >>"
+      containerRuntimeInfo:
+        name: "<< CONTAINER_RUNTIME >>"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
-    containerRuntime:
-      name: "<< CONTAINER_RUNTIME >>"
