--- a/test/e2e/provisioning/testdata/machine-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machine-vsphere.yaml
@@ -2,33 +2,30 @@ apiVersion: "machine.k8s.io/v1alpha1"
 kind: Machine
 metadata:
   name: << MACHINE_NAME >>
+  namespace: kube-system
 spec:
-  metadata:
-    labels:
-      foo: "bar"
   providerConfig:
-    sshPublicKeys:
-      - "<< YOUR_PUBLIC_KEY >>"
-    cloudProvider: "vsphere"
-    cloudProviderSpec:
-      templateVMName: '<< OS_NAME >>-template'
-      username: '<< VSPHERE_USERNAME >>'
-      vsphereURL: '<< VSPHERE_ADDRESS >>'
-      datacenter: 'Datacenter'
-      folder: '/Datacenter/vm/e2e-tests'
-      password: << VSPHERE_PASSWORD >>
-      # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
-      cluster: '<< VSPHERE_CLUSTER >>'
-      datastore: datastore1
-      allowInsecure: true
-      cpus: 2
-      MemoryMB: 2048
-    operatingSystem: "<< OS_NAME >>"
-    operatingSystemSpec:
-      distUpgradeOnBoot: false
-  roles:
-  - "Node"
+    value:
+      sshPublicKeys:
+        - "<< YOUR_PUBLIC_KEY >>"
+      cloudProvider: "vsphere"
+      cloudProviderSpec:
+        templateVMName: '<< OS_NAME >>-template'
+        username: '<< VSPHERE_USERNAME >>'
+        vsphereURL: '<< VSPHERE_ADDRESS >>'
+        datacenter: 'Datacenter'
+        folder: '/Datacenter/vm/e2e-tests'
+        password: << VSPHERE_PASSWORD >>
+        # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+        cluster: '<< VSPHERE_CLUSTER >>'
+        datastore: datastore1
+        allowInsecure: true
+        cpus: 2
+        MemoryMB: 2048
+      operatingSystem: "<< OS_NAME >>"
+      operatingSystemSpec:
+        distUpgradeOnBoot: false
+      containerRuntimeInfo:
+        name: "<< CONTAINER_RUNTIME >>"
   versions:
     kubelet: "<< KUBERNETES_VERSION >>"
-    containerRuntime:
-      name: "<< CONTAINER_RUNTIME >>"
