--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -94,3 +94,11 @@ required = [
 [[constraint]]
   name = "github.com/Azure/go-autorest"
   version = "10.12.*"
+
+[[constraint]]
+  name = "gopkg.in/ini.v1"
+  version = "1.38.2"
+
+[[constraint]]
+  name = "gopkg.in/gcfg.v1"
+  version = "1.2.3"
