--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -10,6 +10,18 @@ spec:
     kind: Machine
     plural: machines
 ---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: machinesets.cluster.k8s.io
+spec:
+  group: cluster.k8s.io
+  version: v1alpha1
+  scope: Namespaced
+  names:
+    kind: MachineSet
+    plural: machinesets
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -293,12 +305,9 @@ rules:
   - "cluster.k8s.io"
   resources:
   - "machines"
+  - "machinesets"
   verbs:
-  - list
-  - get
-  - create
-  - update
-  - watch
+  - '*'
 - apiGroups:
   - ""
   resources:
