--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -22,6 +22,30 @@ spec:
     kind: MachineSet
     plural: machinesets
 ---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: machinedeployments.cluster.k8s.io
+spec:
+  group: cluster.k8s.io
+  version: v1alpha1
+  scope: Namespaced
+  names:
+    kind: MachineDeployment
+    plural: machinedeployments
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: clusters.cluster.k8s.io
+spec:
+  group: cluster.k8s.io
+  version: v1alpha1
+  scope: Namespaced
+  names:
+    kind: Cluster
+    plural: clusters
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -306,6 +330,8 @@ rules:
   resources:
   - "machines"
   - "machinesets"
+  - "machinedeployments"
+  - "clusters"
   verbs:
   - '*'
 - apiGroups:
