--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/digitalocean.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/digitalocean.yaml
@@ -1,4 +1,6 @@
 metadata:
+  annotations:
+    machine-controller/machine-type-revision: e1903be683739379be57f78a4095cd51726495fd
   creationTimestamp: null
   name: digitalocean
   namespace: kube-system
