--- a/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
@@ -1,10 +1,17 @@
 apiVersion: "cluster.k8s.io/v1alpha1"
-kind: MachineSet
+kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
+  paused: false
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 0
   selector:
     matchLabels:
       name: << MACHINE_NAME >>
