--- a/test/e2e/provisioning/testdata/machinedeployment-digitalocean.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-digitalocean.yaml
@@ -1,10 +1,17 @@
 apiVersion: "cluster.k8s.io/v1alpha1"
-kind: MachineSet
+kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
+  paused: false
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 0
   selector:
     matchLabels:
       name: << MACHINE_NAME >>
@@ -17,19 +24,18 @@ spec:
         value:
           sshPublicKeys:
             - "<< YOUR_PUBLIC_KEY >>"
-          cloudProvider: "azure"
+          cloudProvider: "digitalocean"
           cloudProviderSpec:
-            tenantID: "<< AZURE_TENANT_ID >>"
-            clientID: "<< AZURE_CLIENT_ID >>"
-            clientSecret: "<< AZURE_CLIENT_SECRET >>"
-            subscriptionID: "<< AZURE_SUBSCRIPTION_ID >>"
-            location: "westeurope"
-            resourceGroup: "machine-controller-e2e"
-            vmSize: "Standard_F1"
-            vnetName: "machine-controller-e2e"
-            subnetName: "machine-controller-e2e"
-            routeTableName: "machine-controller-e2e"
-            assignPublicIP: false
+            token: << DIGITALOCEAN_TOKEN >>
+            region: nyc3
+            size: c-2
+            backups: false
+            ipv6: false
+            private_networking: true
+            monitoring: false
+            tags:
+              - "machine-controller"
+          # Can be 'ubuntu', 'coreos' or 'centos'
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
