--- a/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-openstack.yaml
@@ -1,10 +1,17 @@
 apiVersion: "cluster.k8s.io/v1alpha1"
-kind: MachineSet
+kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
+  paused: false
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 0
   selector:
     matchLabels:
       name: << MACHINE_NAME >>
@@ -23,7 +30,7 @@ spec:
             username: "<< USERNAME >>"
             password: "<< PASSWORD >>"
             tenantName: "<< TENANT_NAME >>"
-            image: "Ubuntu 18.04 LTS - 2018-08-10"
+            image: "<< OS_IMAGE >>"
             flavor: "m1.small"
             floatingIpPool: ""
             domainName: "<< DOMAIN_NAME >>"
@@ -31,7 +38,7 @@ spec:
             network: "<< NETWORK_NAME >>"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
-            distUpgradeOnBoot: true
+            distUpgradeOnBoot: false
           containerRuntimeInfo:
             name: "<< CONTAINER_RUNTIME >>"
       versions:
