--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -1,10 +1,17 @@
 apiVersion: "cluster.k8s.io/v1alpha1"
-kind: MachineSet
+kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
+  paused: false
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 0
   selector:
     matchLabels:
       name: << MACHINE_NAME >>
@@ -34,6 +41,13 @@ spec:
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
+          network:
+           cidr: "192.168.44.<< IP_OCTET >>/20"
+           gateway: "192.168.32.1"
+           dns:
+             servers:
+              - "192.168.32.1"
+              - "8.8.8.8"
           containerRuntimeInfo:
             name: "<< CONTAINER_RUNTIME >>"
       versions:
