Allow access to status subresource for controller

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -333,8 +333,11 @@ rules:
   resources:
   - "machines"
   - "machinesets"
+  - "machinesets/status"
   - "machinedeployments"
+  - "machinedeployments/status"
   - "clusters"
+  - "clusters/status"
   verbs:
   - '*'
 - apiGroups:
