Add machineDeployment controller (#326)
* Add machine-deployment controller

* Update e2e testing to use machineDeployment on Hetzner

* Use machineDeployment for testing

* Cleanup machine deployments

* Fixup e2es to correctly wait for machines to disappear

* Syntax

* Deploy e2e pubkey on kubeadm master

* Fixup example manifest

* Update cluster-api import to fix machinedeployment-controller npe

* Deploy ssh key on e2e master vm

* Fix circle timeout to be longer than max test duration

* Refactor e2e verify to allow for more scenarios than just create and destroy

* Return machineDeployment from createAndAssure

* Add testscenario for machineDeployments

* Add TestDeploymentControllerUpgradesMachineE2E

* Ensure machineSet controller gets triggered after a ready node exists for a machine

* Scale down machineDeployment instead of machineSet at e2e teardown

* Update examples

* Update docs to reflect usage of machineDeployments

* Fix linting

* Use vsphere+coreos for upgrade test, its way faster

* Run e2e tests on controller vm

* Allow access to status subresource for controller

* Revert "Run e2e tests on controller vm"

This reverts commit 5cb5f516ec6db820faa809d1b1ed89f825113f7d.

* Fix ssh key deployment on controllre vm

* Fix NPE in e2e code when creation failed

* Update doc examples to be valid machineDeployments

--- a/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-hetzner.yaml
@@ -1,10 +1,17 @@
 apiVersion: "cluster.k8s.io/v1alpha1"
-kind: MachineSet
+kind: MachineDeployment
 metadata:
   name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
+  paused: false
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+  minReadySeconds: 0
   selector:
     matchLabels:
       name: << MACHINE_NAME >>
@@ -17,18 +24,12 @@ spec:
         value:
           sshPublicKeys:
             - "<< YOUR_PUBLIC_KEY >>"
-          cloudProvider: "openstack"
+          cloudProvider: "hetzner"
           cloudProviderSpec:
-            identityEndpoint: "<< IDENTITY_ENDPOINT >>"
-            username: "<< USERNAME >>"
-            password: "<< PASSWORD >>"
-            tenantName: "<< TENANT_NAME >>"
-            image: "<< OS_IMAGE >>"
-            flavor: "m1.small"
-            floatingIpPool: ""
-            domainName: "<< DOMAIN_NAME >>"
-            region: "<< REGION >>"
-            network: "<< NETWORK_NAME >>"
+            token: << HETZNER_TOKEN >>
+            serverType: "cx11"
+            datacenter: ""
+            location: "fsn1"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
