--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -21,6 +21,9 @@ spec:
   names:
     kind: MachineSet
     plural: machinesets
+  subresources:
+     # status enables the status subresource.
+     status: {}
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -33,6 +36,9 @@ spec:
   names:
     kind: MachineDeployment
     plural: machinedeployments
+  subresources:
+     # status enables the status subresource.
+     status: {}
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -45,6 +51,9 @@ spec:
   names:
     kind: Cluster
     plural: clusters
+  subresources:
+     # status enables the status subresource.
+     status: {}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
@@ -324,8 +333,11 @@ rules:
   resources:
   - "machines"
   - "machinesets"
+  - "machinesets/status"
   - "machinedeployments"
+  - "machinedeployments/status"
   - "clusters"
+  - "clusters/status"
   verbs:
   - '*'
 - apiGroups:
