--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -9,6 +9,16 @@ spec:
   names:
     kind: Machine
     plural: machines
+  additionalPrinterColumns:
+  - name: Provider
+    type: string
+    JSONPath: .spec.providerConfig.value.cloudProvider
+  - name: OS
+    type: string
+    JSONPath: .spec.providerConfig.value.operatingSystem
+  - name: Address
+    type: string
+    JSONPath: .status.addresses[0].address
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -24,6 +34,16 @@ spec:
   subresources:
      # status enables the status subresource.
      status: {}
+  additionalPrinterColumns:
+  - name: Replicas
+    type: integer
+    JSONPath: .spec.replicas
+  - name: Provider
+    type: string
+    JSONPath: .spec.template.spec.providerConfig.value.cloudProvider
+  - name: OS
+    type: string
+    JSONPath: .spec.template.spec.providerConfig.value.operatingSystem
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -39,6 +59,16 @@ spec:
   subresources:
      # status enables the status subresource.
      status: {}
+  additionalPrinterColumns:
+  - name: Replicas
+    type: integer
+    JSONPath: .spec.replicas
+  - name: Provider
+    type: string
+    JSONPath: .spec.template.spec.providerConfig.value.cloudProvider
+  - name: OS
+    type: string
+    JSONPath: .spec.template.spec.providerConfig.value.operatingSystem
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
