--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -130,12 +130,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: machine-controller:kubelet-config-1.11
+  name: machine-controller:kubelet-config
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: machine-controller:kubelet-config-1.11
+  name: machine-controller:kubelet-config
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
