--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,7 @@ jobs:
           name:  Run E2E test
           command: >-
               export KUBECONFIG=$GOPATH/src/github.com/kubermatic/machine-controller/.kubeconfig &&
-              go test -race -tags=e2e -parallel 240 -v -timeout 30m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM ||
-              (kubectl logs -n kube-system $(kubectl get pods -n kube-system|egrep '^machine-controller'|
-              awk '{print $1}'); exit 1)
+              go test -race -tags=e2e -parallel 240 -v -timeout 30m  ./test/e2e/... -identifier=$CIRCLE_BUILD_NUM  -args -logtostderr
           no_output_timeout: 35m
       - run:
           name: Clean up machines
