--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -385,6 +385,12 @@ rules:
   verbs:
   - "list"
   - "get"
+- apiGroups:
+  - ""
+  resources:
+  - "pods/eviction"
+  verbs:
+  - "create"
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
