--- a/test/e2e/provisioning/testdata/machinedeployment-openstack-upgrade.yml
+++ b/test/e2e/provisioning/testdata/machinedeployment-openstack-upgrade.yml
@@ -39,6 +39,7 @@ spec:
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: true
+            disableAutoUpdate: true
           containerRuntimeInfo:
             name: "<< CONTAINER_RUNTIME >>"
       versions:
