--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -41,6 +41,7 @@ spec:
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
+            disableAutoUpdate: true
           network:
            cidr: "192.168.44.<< IP_OCTET >>/20"
            gateway: "192.168.32.1"
