--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -41,6 +41,7 @@ spec:
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
+            disableAutoUpdate: true
           containerRuntimeInfo:
             name: "<< CONTAINER_RUNTIME >>"
       versions:
