--- a/test/e2e/provisioning/testdata/machinedeployment-digitalocean.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-digitalocean.yaml
@@ -39,6 +39,7 @@ spec:
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
+            disableAutoUpdate: true
           containerRuntimeInfo:
             name: "<< CONTAINER_RUNTIME >>"
       versions:
