--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -175,6 +175,7 @@ spec:
             - -worker-count=5
             - -cluster-dns=10.10.10.10
             - -internal-listen-address=0.0.0.0:8085
+            - -admission-listen-address=0.0.0.0:9876
           ports:
           - containerPort: 8085
           livenessProbe:
@@ -188,6 +189,37 @@ spec:
               path: /ready
               port: 8085
             periodSeconds: 5
+          volumeMounts:
+            - name: machine-controller-admission-cert
+              mountPath: /tmp/cert
+      volumes:
+        - name: machine-controller-admission-cert
+          secret:
+            secretName: machine-controller-admission-cert
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: machine-controller-admission-cert
+  namespace: kube-system
+data:
+  "cert.pem": __admission_cert__
+  "key.pem": __admission_key__
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: machine-controller
+  namespace: kube-system
+spec:
+  ports:
+  - name: 443-9876
+    port: 443
+    protocol: TCP
+    targetPort: 9876
+  selector:
+    app: machine-controller
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -404,3 +436,27 @@ subjects:
   - kind: ServiceAccount
     name: machine-controller
     namespace: kube-system
+---
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: machinedeployments.machine-controller.kubermatic.io
+webhooks:
+- name: machinedeployments.machine-controller.kubermatic.io
+  failurePolicy: Fail
+  rules:
+  - apiGroups:
+    - "cluster.k8s.io"
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - machinedeployments
+  clientConfig:
+    service:
+      namespace: kube-system
+      name: machine-controller
+      path: /machinedeployments
+    caBundle: __admission_ca_cert__
