vendor: add password lib & remove gopkg.in/ini.v1

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -108,9 +108,9 @@ required = [
   version = "v1.1.*"
 
 [[constraint]]
-  name = "gopkg.in/ini.v1"
-  version = "1.38.2"
-
-[[constraint]]
   name = "gopkg.in/gcfg.v1"
   version = "1.2.3"
+
+[[constraint]]
+  name = "github.com/sethvargo/go-password"
+  version = "0.1.2"
