Move TestDeploymentControllerUpgradesMachineE2E to Hetzner

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,6 +143,7 @@ workflows:
       - end-to-end:
           requires:
             - check-dependencies
+            - lint
             - test
             - build
           filters:
