Avoid deleting PV-backing vsphere volumes on instance delete

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -453,10 +453,17 @@ rules:
   - ""
   resources:
   - "pods"
+  verbs:
+  - "list"
+  - "get"
+- apiGroups:
+  - ""
+  resources:
   - "persistentvolumes"
   verbs:
   - "list"
   - "get"
+  - "watch"
 - apiGroups:
   - ""
   resources:
