--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -19,6 +19,10 @@ spec:
   - name: Address
     type: string
     JSONPath: .status.addresses[0].address
+  - name: Age
+    type: date
+    JSONPath: .metadata.creationTimestamp
+
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -44,6 +48,9 @@ spec:
   - name: OS
     type: string
     JSONPath: .spec.template.spec.providerConfig.value.operatingSystem
+  - name: Age
+    type: date
+    JSONPath: .metadata.creationTimestamp
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -69,6 +76,9 @@ spec:
   - name: OS
     type: string
     JSONPath: .spec.template.spec.providerConfig.value.operatingSystem
+  - name: Age
+    type: date
+    JSONPath: .metadata.creationTimestamp
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -212,7 +222,7 @@ spec:
           command:
             - /usr/local/bin/webhook
             - -logtostderr
-            - -v=4
+            - -v=6
             - -listen-address=0.0.0.0:9876
           volumeMounts:
             - name: machine-controller-admission-cert
