Add keypair into openstack deploy param
now something like:

keypair: "k1"

can be added into deploy yml of openstack machine

--- a/examples/openstack-machinedeployment.yaml
+++ b/examples/openstack-machinedeployment.yaml
@@ -81,6 +81,8 @@ spec:
                 key: tenantName
             image: "Ubuntu 18.04 amd64"
             flavor: "m1.small"
+            # only required if there is need to inject keypair
+            keypair: ""
             securityGroups:
               - configMapKeyRef:
                   namespace: kube-system
