--- a/examples/openstack-machinedeployment.yaml
+++ b/examples/openstack-machinedeployment.yaml
@@ -49,31 +49,31 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "openstack"
           cloudProviderSpec:
-          # If empty, ca be set via OS_AUTH_URL env var
+          # If empty, can be set via OS_AUTH_URL env var
             identityEndpoint:
               secretKeyRef:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: identityEndpoint
-          # If empty, ca be set via OS_USER_NAME env var
+          # If empty, can be set via OS_USER_NAME env var
             username:
               secretKeyRef:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: username
-          # If empty, ca be set via OS_PASSWORD env var
+          # If empty, can be set via OS_PASSWORD env var
             password:
               secretKeyRef:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: password
-          # If empty, ca be set via OS_DOMAIN_NAME env var
+          # If empty, can be set via OS_DOMAIN_NAME env var
             domainName:
               secretKeyRef:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: domainName
-          # If empty, ca be set via OS_TENANT_NAME env var
+          # If empty, can be set via OS_TENANT_NAME env var
             tenantName:
               secretKeyRef:
                 namespace: kube-system
@@ -96,7 +96,7 @@ spec:
             network: ""
             # Only required if the network has more than one subnet
             subnet: ""
-            # the list of tags you would like to attach to the instance
+            # the list of metadata you would like to attach to the instance
             tags:
               tagKey: tagValue
           # Can be 'ubuntu', 'coreos' or 'centos'
