--- a/test/tools/integration/Makefile
+++ b/test/tools/integration/Makefile
@@ -1,7 +1,7 @@
 # prow uses BUILD_ID
 # TODO: remove CIRCLE_BUILD_NUM entirely after moving to prow
-CIRCLE_BUILD_NUM ?=$$BUILD_ID
-CIRCLE_BUILD_NUM ?= local
+BUILD_ID ?= $(USER)-local
+CIRCLE_BUILD_NUM ?=$(BUILD_ID)
 
 USER ?= circleCI
 
