--- a/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
@@ -33,6 +33,8 @@ spec:
             instanceProfile: "kubernetes-v1"
             diskSize: 50
             diskType: "gp2"
+            securityGroupIDs:
+            - "sg-0310564b3bfa46ec0"
             tags:
             # you have to set this flag to real clusterID when running against our dev or prod
             # otherwise you might have issues with your nodes not joining the cluster
