--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -26,10 +26,11 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
-            cpus: 1
-            memoryMIB: 2048
+            cpus: "1"
+            memory: "2048M"
             registryImage: quay.io/kubermatic/machine-controller-kubevirt:<< OS_NAME >>-2
-            config: '<< KUBECONFIG >>'
+            config:
+              value: '<< KUBECONFIG >>'
             namespace: kube-system
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
