--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/openstack.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/openstack.yaml
@@ -1,6 +1,6 @@
 metadata:
   annotations:
-    machine-controller/machine-type-revision: 05cb1e663eb4085fbb92321dd1235377c84567f8
+    machine-controller/machine-type-revision: 45f1c93260140936c610e56575d7505ba3d52444
   creationTimestamp: null
   name: openstack
   namespace: kube-system
@@ -9,7 +9,7 @@ spec:
     creationTimestamp: null
     labels:
       foo: bar
-  providerConfig:
+  providerSpec:
     value:
       cloudProvider: openstack
       cloudProviderSpec:
