--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/hetzner.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/hetzner.yaml
@@ -1,13 +1,13 @@
 metadata:
   annotations:
-    machine-controller/machine-type-revision: 05cb1e663eb4085fbb92321dd1235377c84567f8
+    machine-controller/machine-type-revision: 45f1c93260140936c610e56575d7505ba3d52444
   creationTimestamp: null
   name: hetzner
   namespace: kube-system
 spec:
   metadata:
     creationTimestamp: null
-  providerConfig:
+  providerSpec:
     value:
       cloudProvider: hetzner
       cloudProviderSpec:
