remove unused fields from Linode config

--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/machinesv1alpha1machine/linode.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/machinesv1alpha1machine/linode.yaml
@@ -12,7 +12,7 @@ spec:
     cloudProviderSpec:
       token: "token"
       region: eu-west
-      size: g6-standard-2
+      type: g6-standard-2
       backups: false
       private_networking: true
       tags:
