--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/linode.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machine/linode.yaml
@@ -15,7 +15,7 @@ spec:
         backups: false
         private_networking: true
         region: eu-west
-        size: g6-standard-2
+        type: g6-standard-2
         tags:
         - machine-controller
         token: token
