Add GCP provider to docs

--- a/test/e2e/provisioning/testdata/machinedeployment-gcp.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-gcp.yaml
@@ -37,7 +37,7 @@ spec:
             # Can be 'pd-standard' or 'pd-ssd'
             diskType: "pd-standard"
             labels:
-                "KubernetesCluster": "randomString"            
+                "KubernetesCluster": "my-cluster"            
           # Can be 'ubuntu', 'coreos' or 'centos'
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
